# stream0

./: .gitignore  CLAUDE.md  Cargo.toml  DOGFOOD_ISSUES.md  PRODUCT.md  README.md  SELF_HOSTING.md  SKILL.md  STREAM0_SKILL.md  TESTING.md  config.go  database.go  database_test.go  demo.sh  go.mod  go.sum  install.sh  main.go  server.go  server_test.go  test_go.py
.github/workflows/: ci.yml  release.yml
box-backend/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
box-backend/.agents/skills/fastify-backend-dev/: SKILL.md
box-backend/.agents/skills/fastify-backend-dev/references/: change-checklist.md  repo-map.md
box-backend/openapi/: swagger.json
box-backend/scripts/: generate-swagger.ts
box-backend/src/: app.ts  generate-openapi.ts  server.ts
box-backend/src/config/: env.ts  logger.ts  meta.ts
box-backend/src/modules/: index.ts
box-backend/src/modules/auth/: routes.ts
box-backend/src/modules/health/: routes.ts
box-backend/src/modules/system/: routes.ts
box-backend/src/plugins/: docs.ts  security.ts  supabase.ts
box-backend/src/types/: fastify.d.ts
box-backend/test/: app.test.ts  auth.test.ts
box0-core/: AGENTS.md  CLAUDE.md  README.md
docs/: README.md  architecture.md  cli.md  cron.md  multi-machine.md  skills.md  slack.md  teams.md  tutorial-channel.md  workflows.md
frontend/: README.md  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  legacy-dashboard.js  style.css
frontend/src/api-gen/: client.gen.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/api-gen/@tanstack/: react-query.gen.ts
frontend/src/lib/: backend-api.ts  box0-api.ts  client.config.ts  supabase.ts
frontend/src/lib/api-gen/: index.ts  sdk.gen.ts
frontend/src/routes/: _box0.tsx  login.tsx
frontend/src/routes/_box0/: agents.$name.tsx  agents.tsx  machines.$machineId.tsx  machines.tsx  tasks.$taskId.tsx  tasks.tsx  users.tsx  workspaces.tsx
frontend/src/styles/: app.css  box0-dashboard.css
mcp/: README.md  pyproject.toml  stream0-channel.ts  stream0_mcp.py
npm/: install.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/stream0/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_client.py  test_integration.py
src/: client.rs  config.rs  daemon.rs  db.rs  lib.rs  main.rs  scheduler.rs  server.rs
tests/: api.rs  e2e.sh
web/: index.html
