[project]
name = "stream0-mcp"
version = "0.1.0"
description = "MCP server for Stream0 — gives Claude Code agents native inbox access"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
